Updated ipynb with latest analysis

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from matplotlib import style\n",
     "style.use('fivethirtyeight')\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -559,16 +560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(62.0, 69.15384615384616, 77.0)]"
+       "[(64.0, 74.6140350877193, 81.0)]"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +582,41 @@
     "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
     "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
     "    \n",
-    "daily_normals(\"01-01\")"
+    "daily_normals(\"06-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ttestvalues(date):\n",
+    "    sel = [Measurement.tobs]\n",
+    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
+    "    \n",
+    "one = ttestvalues(\"06-01\")\n",
+    "two = ttestvalues(\"12-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=array([3.91836547]), pvalue=array([0.00016079]))"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(one, two, equal_var=False)"
    ]
   },
   {
