Updated ipynb with latest analysis

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -175,9 +175,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last Date: ('2017-08-23',)\n",
+      "Query Date:  2016-08-23\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prcp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>1.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Prcp\n",
+       "Date            \n",
+       "2016-08-23  0.70\n",
+       "2016-08-23  0.00\n",
+       "2016-08-23  0.15\n",
+       "2016-08-23  1.79\n",
+       "2016-08-23  0.02"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Designed a query to retrieve the last 12 months of precipitation data and plot the results\n",
     "# Calculateed the date 1 year ago from the last data point in the database\n",
@@ -185,22 +261,24 @@
     "print(\"Last Date:\", last_date)\n",
     "query_date = dt.date(2017, 8 ,23) - dt.timedelta(days=365)\n",
     "print(\"Query Date: \", query_date)\n",
+    "\n",
     "# Performed a query to retrieve the data and precipitation scores\n",
     "last_twelve = session.query(Measurement.date,Measurement.prcp).\\\n",
     "    filter(Measurement.date >= '2016-08-23').\\\n",
     "    order_by(Measurement.date.desc()).all()\n",
+    "\n",
     "# Saved the query results as a Pandas DataFrame and set the index to the date column\n",
     "df = pd.DataFrame(last_twelve[:], columns=['Date', 'Prcp'])\\\n",
     "    .replace(to_replace='None', value=np.nan).dropna()\n",
     "df.set_index('Date', inplace=True)\n",
-    "df.head(10)\n",
+    "\n",
     "# Sorted the dataframe by date\n",
     "df = df.sort_values('Date')\n",
-    "df.head()\n",
+    "\n",
     "# Used Pandas Plotting with Matplotlib to plot the data\n",
-    "prcp = df.reset_index()[\"Prcp\"]\n",
-    "df.plot(kind=\"bar\", width=0.5, figsize=(20, 15), xticks = x_pos)\n",
-    "plt.show()"
+    "df.plot(kind=\"bar\", width=0.5, figsize=(20, 15))\n",
+    "plt.show()\n",
+    "df.head()"
    ]
   },
   {
@@ -417,15 +495,18 @@
     "print(\"Last Date for Max_Temp_Observed:\", max_tobs_last_date)\n",
     "query_date = dt.date(2017, 8 ,18) - dt.timedelta(days=365)\n",
     "print(\"Query Date: \", query_date)\n",
+    "\n",
     "# Queried the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
     "last_twelve_max_tobs = session.query(Measurement.date,Measurement.tobs).\\\n",
     "    filter(Measurement.station == 'USC00519281').\\\n",
     "    filter(Measurement.date >= '2016-08-18').\\\n",
     "    order_by(Measurement.date.desc()).all()\n",
+    "\n",
     "# Saved the query results as a Pandas DataFrame and set the index to the date column\n",
     "max_tobs_df = pd.DataFrame(last_twelve_max_tobs[:], columns=['Date', 'TOBS'])\\\n",
     "    .replace(to_replace='None', value=np.nan).dropna()\n",
     "max_tobs_df.head(10)\n",
+    "\n",
     "# Sorted the dataframe by date\n",
     "max_tobs_df = max_tobs_df.sort_values('Date').set_index('Date')\n",
     "max_tobs_df.head()\n",
@@ -657,6 +738,7 @@
     "# Set the start and end date of the trip\n",
     "start = '2017-02-28'\n",
     "end = '2017-03-05'\n",
+    "\n",
     "# Use the start and end date to create a range of dates\n",
     "startdate = dt.datetime.strptime(start, \"%Y-%m-%d\")\n",
     "enddate = dt.datetime.strptime(end, \"%Y-%m-%d\")\n",
@@ -669,6 +751,7 @@
     "\n",
     "# Strip off the year and save a list of %m-%d strings\n",
     "stripped_date = [date.strftime(\"%m-%d\") for date in date_generated]\n",
+    "\n",
     "# Loop through the list of %m-%d strings and calculate the normals for each date\n",
     "date_query = [daily_normals(date)[0] for date in stripped_date]\n",
     "date_query"
