--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "2016-08-23  0.02"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -283,7 +283,7 @@
     "\n",
     "# Performed a query to retrieve the data and precipitation scores\n",
     "last_twelve = session.query(Measurement.date,Measurement.prcp).\\\n",
-    "    filter(Measurement.date >= '2016-08-23').\\\n",
+    "    filter(Measurement.date >= query_date).\\\n",
     "    order_by(Measurement.date.desc()).all()\n",
     "\n",
     "# Saved the query results as a Pandas DataFrame and set the index to the date column\n",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -480,11 +480,68 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TOBS</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-08-18</th>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-19</th>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-20</th>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-21</th>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-22</th>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1516e0c88>"
+       "            TOBS\n",
+       "Date            \n",
+       "2016-08-18  80.0\n",
+       "2016-08-19  79.0\n",
+       "2016-08-20  81.0\n",
+       "2016-08-21  79.0\n",
+       "2016-08-22  78.0"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -511,8 +568,8 @@
     "# Queried the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
     "last_twelve_max_tobs = session.query(Measurement.date,Measurement.tobs).\\\n",
     "    filter(Measurement.station == 'USC00519281').\\\n",
-    "    filter(Measurement.date >= '2016-08-18')#.\\\n",
-    "    #order_by(Measurement.date.desc()).all()\n",
+    "    filter(Measurement.date >= '2016-08-18').\\\n",
+    "    order_by(Measurement.date.desc()).all()\n",
     "\n",
     "# Saved the query results as a Pandas DataFrame and set the index to the date column\n",
     "max_tobs_df = pd.DataFrame(last_twelve_max_tobs[:], columns=['Date', 'TOBS'])\\\n",
@@ -521,8 +578,8 @@
     "\n",
     "# Sorted the dataframe by date\n",
     "max_tobs_df = max_tobs_df.sort_values('Date').set_index('Date')\n",
-    "max_tobs_df.head()\n",
-    "max_tobs_df.plot(kind='hist', bins=12)"
+    "max_tobs_df.plot(kind='hist', bins=12)\n",
+    "max_tobs_df.head()"
    ]
   },
   {
@@ -895,6 +952,13 @@
     "# Plotted the daily normals as an area plot with `stacked=False`\n",
     "query_df.plot(kind='area', stacked=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
